# libwamrconfig

./: libwamrconfig.config.in  libwamrconfig.opam
