opam-version: "2.0"
version: "0.0.0"
synopsis: "wasm-micro-runtime's iwasm core packaged for OCaml"
maintainer: "blaine@grain-lang.org"
author: "Blaine Bublitz"
license: "Apache-2.0"
homepage: "https://github.com/grain-lang/libwamr"
dev-repo: "git+https://github.com/grain-lang/libwamr.git"
bug-reports: "https://github.com/grain-lang/libwamr/issues"
build: [
    [ "opam" "config" "subst" "libwamrconfig.config" ]
]
install: []
depends: []
